--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
 * {
     margin: 0;
 }
+
+header {
+    height: 40vh;
+    border: 1px solid black;
+}
+
+.divSpacing {
+    border: 1px solid black;
+    height: 31.5vh;
+}
+
+.blockFooter {
+    border: 1px solid black;
+    height: 5vh;
+}
+
+.block3 {
+    border: 1px solid black;
+    height: 49vh;
+}
+
+.block4 {
+    border: 1px solid black;
+    height: 66.5vh;
+}
+
+.block5 {
+    border: 1px solid black;
+    height: 50.6vh;
+}
+
+.block6 {
+    border: 1px solid black;
+    height: 56vh;
+}
+
+.block7 {
+    border: 1px solid black;
+    height: 35vh;
+}
