--- a/style.css
+++ b/style.css
@@ -3,45 +3,57 @@
 }
 
 header {
+    background-image: url(http://wideopentech.com/themes/wot-2013-gm/_/img/wot-masthead-dark.jpg);
+    background-position: center bottom;
+    background-size: 100%;
     height: 40vh;
 }
 
-.tempBorder {
-
-    border: 1px solid black;
-}
-
 .block2 {
-
+    background-color: #F0F0F0;
     height: 31.5vh;
 }
 
-.blockFooter {
-
-    height: 5vh;
-}
-
 .block3 {
-
     height: 49vh;
 }
 
 .block4 {
-
+    background-color: #F0F0F0;
     height: 66.5vh;
 }
 
 .block5 {
-
+    background-color: #BDD537;
     height: 50.6vh;
 }
 
 .block6 {
+    display: flex;
+    flex-flow: row;
+    height: 43vh;
+}
 
-    height: 56vh;
+.sections6 {
+    height: 100%;
+    width: 50%;
+}
+
+.leftSection {
+    background-image: url(http://wideopentech.com/themes/wot-2013-gm/_/img/wilmington.jpg);
+    background-size: 100%;
+}
+
+.rightSection {
+    background-image: url(http://wideopentech.com/themes/wot-2013-gm/_/img/asheville.jpg);
+    background-position: bottom;
+    background-size: 100%;
 }
 
 .block7 {
-
     height: 35vh;
+}
+.blockFooter {
+    background: #7c7c7c;
+    height: 5vh;
 }
